# FastAPI-Blog

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_09_29_1220-030d82b4f99a_create_users_table.py  2024_10_03_1520-a6741ab46317_user_model.py  2024_10_03_1817-e9fd11328c16_user_model.py  2024_10_06_1156-af2a695918da_user_model.py  2024_10_26_2005-3eb0d313a069_article_model.py  2024_10_28_1426-afed8cee7bdf_comment_renamed_user_id_author_id.py
ddd/src/application/: uow.py
docs/: dependencies-structure.d2
old/: .gitignore  pyproject.toml
old/alembic/: env.py
old/alembic/versions/: 2024_10_26_2008-ba3b23956f0d_article_model.py  2024_10_28_1238-4d1185157469_user_added_image_path.py  2024_11_06_1950-875cc794a4f9_user_added_created_at.py
old/src/: __init__.py  celery.py  config.py  main.py
old/src/articles/: models.py  schemas.py  utils.py  views.py
old/src/auth/: dependencies.py  models.py  schemas.py  services.py  tasks.py  utils.py
old/src/users/: dependencies.py  schemas.py  services.py  views.py
scripts/dishka/: plot_dependencies_data.py
src/: __init__.py  celery-run.py  config.py  database.py  main.py  run.py
src/api/v1/: exception_handler.py  include_routers.py
src/application/: commiter.py  uow.py
src/application/errors/: article.py  not_found.py  user.py  validation.py
src/application/processors/: email_sender.py  file_operators.py  password_hasher.py
src/application/providers/: code_generator.py  email_sender.py  file_operators.py
src/application/services/: user.py  user_registration.py
src/articles/: models.py  schemas.py
src/auth/: configuration.py  dependencies.py  models.py  schemas.py  services.py  tasks.py  utils.py  views.py
src/infrastructure/: config.py  configs.py  types.py
src/setup/: app_factory.py  base_config.py  configs.py
src/users/: dependencies.py  schemas.py  services.py  views.py
(+151 files in other folders)
