[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["Vae1ocks <antondobranickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
black = "^24.8.0"
uvicorn = "^0.31.0"
itsdangerous = "^2.2.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
email-validator = "^2.2.0"
bcrypt = "^4.2.0"
celery = "^5.4.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
